--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: AMWG development
-description: documentation about the AMWG simulations
+description: documentating the AMWG development simulations
